<resources>
    <string name="app_name">Quiz</string>
    <string name="studentButton">I am a student</string>
    <string name="teacherButton">I am a teacher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="exit_quiz">Exit Quiz</string>
    <string name="next">Next</string>
<!--    <string name="update">Update</string>-->
<!--    <string name="module_name">Module Name</string>-->
<!--    <string name="module_description">Module Description</string>-->
    <string name="question">Question</string>
    <string name="which_option_is_the_correct_answer_1_10">Which option is the correct answer? (1-10)</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="option_5">Option 5</string>
    <string name="option_6">Option 6</string>
    <string name="option_7">Option 7</string>
    <string name="option_8">Option 8</string>
    <string name="option_9">Option 9</string>
    <string name="option_10">Option 10</string>
    <string name="add_question">Add Question</string>
    <string name="update_question">Update question</string>
    <string name="update_correct_answer_1_10">Update Correct Answer (1-10)</string>
    <string name="update_option_1">Update Option 1</string>
    <string name="update_option_2">Update Option 2</string>
    <string name="update_option_3">Update Option 3</string>
    <string name="update_option_4">Update Option 4</string>
    <string name="update_option_5">Update Option 5</string>
    <string name="update_option_6">Update Option 6</string>
    <string name="update_option_7">Update Option 7</string>
    <string name="update_option_8">Update Option 8</string>
    <string name="update_option_9">Update Option 9</string>
    <string name="update_option_10">Update Option 10</string>
    <string name="update">Update</string>
    <string name="choose_question_bank">Choose Question Bank</string>
    <string name="random_question_bank">Random Question Bank</string>
    <string name="question_bank_name">Question Bank Name</string>
    <string name="question_bank_description">Question Bank Description</string>
    <string name="module_name">Module Name</string>
    <string name="module_description">Module Description</string>
    <string name="cancel">cancel</string>
    <string name="random_quiz">Random Quiz</string>
    <string name="update_question_bank">Update Question Bank</string>

</resources>